scss fix for jump to tool

--- a/assets/scss/layouts/home/_home.scss
+++ b/assets/scss/layouts/home/_home.scss
@@ -225,7 +225,6 @@ div#heroinner * {
         width: 100%;
         height: 44px;
         font-family: proxima-nova, sans-serif;
-        appearance: auto;
 
         &:disabled {
             background: #f5f5f5;
